# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import invoicesRouter from "./invoices";
+import vendorsRouter from "./vendors";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/invoices", invoicesRouter);
+router.use("/vendors", vendorsRouter);
 
 export default router;
